--- a/templates/index.html
+++ b/templates/index.html
@@ -77,30 +77,29 @@
             <div class="row">
 
                 <div class="col-lg-8 col-12 mx-auto">
-                    <form class="custom-form contact-form bg-white shadow-lg" action="#" method="post" role="form">
-                        <h2>Please Say Hi</h2>
+                    <form class="custom-form contact-form bg-white shadow-lg" action="" method="post" role="form">
+                        {% csrf_token %}
+                        <h2>Написать нам</h2>
 
                         <div class="row">
                             <div class="col-lg-4 col-md-4 col-12">
-                                <input type="text" name="name" id="name" class="form-control" placeholder="Name"
-                                       required="">
+                                {{ form.form_name }}
                             </div>
 
                             <div class="col-lg-4 col-md-4 col-12">
-                                <input type="email" name="email" id="email" pattern="[^ @]*@[^ @]*" class="form-control"
-                                       placeholder="Email" required="">
+                                 {{ form.form_email }}
                             </div>
 
+
                             <div class="col-lg-4 col-md-4 col-12">
-                                <input type="text" name="subject" id="subject" class="form-control"
-                                       placeholder="Subject">
+                                {{ form.form_subject }}
                             </div>
+
 
                             <div class="col-12">
-                                <textarea class="form-control" rows="5" id="message" name="message"
-                                          placeholder="Message"></textarea>
+                                {{ form.form_text }}
 
-                                <button type="submit" class="form-control">Submit</button>
+                                <button type="submit" class="form-control">Отправить</button>
                             </div>
 
                         </div>
